--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,10 @@
   }
 }
 
-.App-header {
+.App .documents {
   background-color: #282c34;
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
